--- a/config/locales/jpn/rights.yml
+++ b/config/locales/jpn/rights.yml
@@ -35,6 +35,7 @@ jpn:
     # manage_entities_natures: "Gérer les types de fiche"
     # manage_entity_categories: "Gérer les catégories de fiche"
     # manage_entity_links: "Gérer les liens entre fiches"
+    # manage_equipments: "Gérer le matériel"
     # manage_estimates: "Créer, modifier des devis"
     # manage_events: "Gérer les évènements"
     # manage_financial_years: "Gérer, clôturer les exercices"
@@ -61,7 +62,6 @@ jpn:
     # manage_sales: "Gérer les ventes (devis, commandes et livraisons)"
     # manage_subscriptions: "Gérer les abonnements"
     # manage_taxes: "Gérer les taxes"
-    # manage_tools: "Gérer les outils de production"
     # manage_transports: "Gérer les transports"
     # manage_units: "Gérer les unités de mesure"
     # manage_users: "Gérer les utilisateurs"
