--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1395,6 +1395,7 @@ arb:
     operation_items: "الواردات/الصادرات"
     # operation_nature: "Type d’operation"
     operation_natures: "انواع العمل"
+    # operation_tasks: "Operation tasks"
     operation_uses: "استخدامات الاداة"
     operations: "الاعمال"
     order: "طلب البيع"
