Fixes remaining bugs in functionals tests

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2496,6 +2496,8 @@ arb:
         outgoing_payments:
           # number_format: "D[year|4][number|4]"
           # period: "year"
+        products:
+          # number_format: "P[number|11]"
         purchases:
           # number_format: "A[year|4][month|2][number|6]"
           # period: "month"
