--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1520,7 +1520,7 @@ jpn:
       informations:
         # with_components: "%{product} (%{unit}) (produit transformé)"
         # without_components: "%{product} (%{unit}) (matière première)"
-      # label: "%{product} (%{unit})"
+      # label: "%{product_nature} (%{unit})"
       # stock_move: "%{origin} (%{code})"
       subscription_label:
         # period: "Abonnement %{subscription_nature} pour %{entity} à l’adresse %{address} du %{start} au %{finish}"
@@ -1604,6 +1604,8 @@ jpn:
         outgoing_payments:
           # number_format: "D[year|4][number|4]"
           # period: "year"
+        products:
+          # number_format: "P[number|11]"
         purchases:
           # number_format: "A[year|4][month|2][number|6]"
           # period: "month"
