Updates unrolls translations

--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1677,6 +1677,8 @@ jpn:
       # all: "{started_at}"
     backend/product_nature_prices:
       # all: "{amount} {currency} / {pretax_amount} {currency}"
+    backend/product_natures:
+      # all: "{name}"
     backend/product_transfers:
       # all: "{id}"
     backend/products:
