--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1728,6 +1728,8 @@ eng:
       # all: "{started_at}"
     backend/product_nature_prices:
       # all: "{amount} {currency} / {pretax_amount} {currency}"
+    backend/product_natures:
+      # all: "{name}"
     backend/product_transfers:
       # all: "{id}"
     backend/products:
