--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -63,6 +63,9 @@ jpn:
         # number: "Numéro PAC ou numéro de parcelle"
       mandate:
         # family: "Famille"
+      matter:
+        # born_at: "Date de création"
+        # dead_at: "Date de consommation/destruction"
       operation:
         # consumption: "Consommation"
       outgoing_delivery:
@@ -180,8 +183,11 @@ jpn:
         # reproductor: "Multiplication"
         # variety: "Variété"
       warehouse:
+        # born_at: "Date de construction"
         # children: "Sous lieu de stockage"
-        # product: "Produit contenu"
+        # content_maximal_quantity: "Quantité maximale supportée"
+        # content_nature: "Type de Produit contenu"
+        # variety: "Genre"
     errors:
       messages:
         # accepted: "%{attribute} doit être accepté"
