--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -284,6 +284,11 @@ arb:
       edit: "تعديل التفويض"
       index: "تفويضات"
       new: "انشاء تفويض"
+    backend/matters:
+      # edit: "Modifier la matière\_: %{name}"
+      # index: "Matières"
+      # new: "Nouvelle matière"
+      # show: "Matière\_: %{name}"
     backend/myselves:
       # change_password: "Changer de mot de passe"
       statistics: "احصائياتي"
@@ -703,7 +708,7 @@ arb:
     backend/users: "المستخدمين"
     # backend/vegetals: "Productions végétales"
     backend/warehouses: "مواقع التخزين"
-    # backend/working_sets: "Unité de travail"
+    # backend/working_sets: "Unités de travail"
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
@@ -1987,6 +1992,8 @@ arb:
       # all: "{reason}"
     backend/logs:
       # all: "{observed_at}"
+    backend/matters:
+      # all: "{name} - {work_number}"
     backend/observations:
       # all: "{content}"
     backend/operations:
