--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -278,6 +278,9 @@ arb:
         family: "الفصيلة"
         started_on: "ابتدأ في" #?
         stopped_on: "انتهى في" #?
+      matter:
+        # born_at: "Date de création"
+        # dead_at: "Date de consommation/destruction"
       observation:  #?
         company_id: "الشركة" #?
         updated_at: "تم انشأئها في" #?
@@ -631,8 +634,11 @@ arb:
         # reproductor: "Multiplication"
         # variety: "Variété"
       warehouse:
+        # born_at: "Date de construction"
         # children: "Sous lieu de stockage"
-        # product: "Produit contenu"
+        # content_maximal_quantity: "Quantité maximale supportée"
+        # content_nature: "Type de Produit contenu"
+        # variety: "Genre"
     errors:
       messages:
         accepted: "%{attribute} يجب أن تكون مقبولة"
