--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -241,6 +241,11 @@ eng:
       edit: "Edit the mandate"
       index: "Mandates"
       new: "Add a mandate"
+    backend/matters:
+      # edit: "Modifier la matière\_: %{name}"
+      # index: "Matières"
+      # new: "Nouvelle matière"
+      # show: "Matière\_: %{name}"
     backend/myselves:
       change_password: "Change my password"
       statistics: "My statistics"
@@ -582,7 +587,7 @@ eng:
     backend/users: "Users"
     # backend/vegetals: "Productions végétales"
     backend/warehouses: "Warehouses"
-    # backend/working_sets: "Unité de travail"
+    # backend/working_sets: "Unités de travail"
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
@@ -1718,6 +1723,8 @@ eng:
       # all: "{reason}"
     backend/logs:
       # all: "{observed_at}"
+    backend/matters:
+      # all: "{name} - {work_number}"
     backend/observations:
       # all: "{content}"
     backend/operations:
