--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -55,6 +55,9 @@ fra:
         number: "Numéro PAC ou numéro de parcelle"
       mandate:
         family: "Famille"
+      matter:
+        born_at: "Date de création"
+        dead_at: "Date de consommation/destruction"
       operation:
         consumption: "Consommation"
       outgoing_delivery:
@@ -165,10 +168,10 @@ fra:
         reproductor: "Multiplication"
         variety: "Variété"
       warehouse:
-        children: "Sous lieu de stockage"
-        content_nature: "Type de Produit contenu"
-        content_maximal_quantity: "Quantité maximale supportée"
         born_at: "Date de construction"
+        children: "Sous lieu de stockage"
+        content_maximal_quantity: "Quantité maximale supportée"
+        content_nature: "Type de Produit contenu"
         variety: "Genre"
     errors:
       messages:
