--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -276,6 +276,11 @@ spa:
       # edit: "Modifier la responsabilité"
       # index: "Responsabilités"
       # new: "Créer une responsabilité"
+    backend/matters:
+      # edit: "Modifier la matière\_: %{name}"
+      # index: "Matières"
+      # new: "Nouvelle matière"
+      # show: "Matière\_: %{name}"
     backend/myselves:
       # change_password: "Changer de mot de passe"
       # statistics: "Mes statistiques"
@@ -639,7 +644,7 @@ spa:
     backend/users: "Utilizador"
     # backend/vegetals: "Productions végétales"
     backend/warehouses: "Lugar de deposito"
-    # backend/working_sets: "Unité de travail"
+    # backend/working_sets: "Unités de travail"
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
@@ -1798,6 +1803,8 @@ spa:
       # all: "{reason}"
     backend/logs:
       # all: "{observed_at}"
+    backend/matters:
+      # all: "{name} - {work_number}"
     backend/observations:
       # all: "{content}"
     backend/operations:
