Cleans ApplicationHelper by removing useless code

--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1345,6 +1345,12 @@ spa:
     # sale_deliveries: "Livraisons"
     # sale_item_create: "Ajouter un produit au devis (Mode complet)"
     # sale_items: "Lignes de la vente"
+    sale_steps:
+      deliveries: "Planificación de las entregas"
+      estimate: "Creación del presupuesto"
+      general: "Descripción"
+      products: "Productos"
+      summary: "Factura y encajonamientos"
     # sale_update: "Modifier les informations du devis"
     sales: "Exportar un cuadro de ventas al formato CSV"
     # sales_conditions: "Conditions de vente"
@@ -1365,12 +1371,6 @@ spa:
       # all: "Toutes"
       # current: "En cours"
       # unpaid: "Impayées"
-    sales_steps:
-      deliveries: "Planificación de las entregas"
-      estimate: "Creación del presupuesto"
-      general: "Descripción"
-      products: "Productos"
-      summary: "Factura y encajonamientos"
     # save: "Enregistrer"
     save_in_draft: "Salvar en la niebla"
     # scheduled: "Échéance"
