--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1478,6 +1478,12 @@ arb:
     sale_nature_create: "انشاء نوع بيع جديد" #?
     sale_price_create: "اضافة سعر البيع" #?
     sale_print: "طباعة طلب البيع" #?
+    sale_steps:
+      deliveries: "جدولة عمليات التسليم"
+      estimate: "انشاء تقييم"
+      general: "الوصف"
+      products: "المنتجات"
+      summary: "فواتير وايصالات"
     sale_update: "تعديل معلومات الطلب"
     sales: "تم تسديد دفعات طلب البيع"
     # sales_conditions: "Conditions de vente"
@@ -1499,12 +1505,6 @@ arb:
       # all: "Toutes"
       # current: "En cours"
       # unpaid: "Impayées"
-    sales_steps:
-      deliveries: "جدولة عمليات التسليم"
-      estimate: "انشاء تقييم"
-      general: "الوصف"
-      products: "المنتجات"
-      summary: "فواتير وايصالات"
     save: "حفظ"
     save_in_draft: "حفظ في المسودات"
     # scheduled: "Échéance"
