--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1241,6 +1241,12 @@ jpn:
     # sale_deliveries: "Livraisons"
     # sale_item_create: "Ajouter un produit au devis (Mode complet)"
     # sale_items: "Lignes de la vente"
+    sale_steps:
+      # deliveries: "Planification des livraisons"
+      # estimate: "Création du devis"
+      # general: "Description"
+      # products: "Produits"
+      # summary: "Facture et encaissements"
     # sale_update: "Modifier les informations du devis"
     # sales: "Ventes"
     # sales_conditions: "Conditions de vente"
@@ -1260,12 +1266,6 @@ jpn:
       # all: "Toutes"
       # current: "En cours"
       # unpaid: "Impayées"
-    sales_steps:
-      # deliveries: "Planification des livraisons"
-      # estimate: "Création du devis"
-      # general: "Description"
-      # products: "Produits"
-      # summary: "Facture et encaissements"
     # save: "Enregistrer"
     # save_in_draft: "Sauvegarder dans le brouillard"
     # scheduled: "Échéance"
