Cleans code only (through rake clean)

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -24,6 +24,7 @@ arb:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
       # new: "Nouvel animal"
+      # picture: "Photo"
       # show: "%{nature_name}\_: %{name}"
     backend/areas:
       edit: "تعديل العنوان البريدي : %{name}"
@@ -143,6 +144,7 @@ arb:
       index: "سجلات الاشخاص"
       merge: "دمج التكرار مع المافات الاصلية"
       new: "انشاء ملف جديد للعميل / للممول"
+      # picture: "Portrait"
       show: "ملف: %{full_name}"
     backend/entity_addresses:
       # edit: "Modifier une coordonnée"
@@ -288,6 +290,7 @@ arb:
       # edit: "Modifier la matière\_: %{name}"
       # index: "Matières"
       # new: "Nouvelle matière"
+      # picture: "Visuel"
       # show: "Matière\_: %{name}"
     backend/myselves:
       # change_password: "Changer de mot de passe"
