--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -17,6 +17,7 @@ jpn:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
       # new: "Nouvel animal"
+      # picture: "Photo"
       # show: "%{nature_name}\_: %{name}"
     backend/areas:
       # edit: "Modifier la zone postale\_: %{name}"
@@ -111,6 +112,7 @@ jpn:
       # index: "Personnes"
       # merge: "Fusionner un doublon à sa fiche d’origine"
       # new: "Nouvelle fiche client/fournisseur"
+      # picture: "Portrait"
       # show: "Fiche\_: %{full_name}"
     backend/entity_addresses:
       # edit: "Modifier une coordonnée"
@@ -232,6 +234,7 @@ jpn:
       # edit: "Modifier la matière\_: %{name}"
       # index: "Matières"
       # new: "Nouvelle matière"
+      # picture: "Visuel"
       # show: "Matière\_: %{name}"
     backend/myselves:
       # change_password: "Changer de mot de passe"
